@@ -6,4 +6,3 @@ use Test::More tests => 1;
 BEGIN {
 	use_ok( 'Data::FormValidator::Filters::Demoroniser' );
 }
-
