@@ -1,3 +1,6 @@
+#!/usr/bin/perl -w
+use strict;
+
 use Test::More;
 
 # Skip if doing a regular install
@@ -7,4 +10,3 @@ plan skip_all => "Author tests not required for installation"
 eval "use Test::Pod 1.00";
 plan skip_all => "Test::Pod 1.00 required for testing POD" if $@;
 all_pod_files_ok();
-
