@@ -6,6 +6,8 @@
         - License updated to Artistic License v2.
         - updated META files, adding META.json.
         - added minimum perl version (5.006).
+        - reworked Makefile.PL for clarity.
+        - updated test suite.
 
 0.02    2009-08-11
 	    - abstracted guts out into Text::Demoroniser as suggested by Brian 
